# vscode-mcshader

./: .gitignore  .rustfmt.toml  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json
client/: package-lock.json  package.json
client/src/: commands.ts  constant.ts  extension.ts  log.ts  lspClient.ts  main.ts  notification.ts
server/: .gitignore  Cargo.toml
server/logging/: Cargo.toml
server/logging/src/: lib.rs
server/main/: Cargo.toml
server/main/src/: capability.rs  configuration.rs  constant.rs  diagnostics_parser.rs  enchanter.rs  enhancer.rs  main.rs  notification.rs  opengl.rs  server.rs  shader_file.rs  tree_parser.rs  validator.rs
server/main/src/commands/: mod.rs  virtual_merge.rs
server/main/src/file/: compile_cache.rs  include_file.rs  mod.rs  shader_cache.rs  shader_file.rs  temp_file.rs  workspace_file.rs
server/main/src/server/: change_file.rs  close_file.rs  data.rs  data_manager.rs  document_links.rs  error.rs  find_definitions.rs  find_references.rs  list_symbols.rs  mod.rs  open_file.rs  rename_files.rs  save_file.rs  server_data.rs  service.rs  update_watched_files.rs  update_work_spaces.rs  update_workspaces.rs  utility.rs
server/main/src/tree_parser/: definition.rs  mod.rs  reference.rs  simple_lint.rs  symbols.rs
