[package]
name = "vscode-mcshader"
version = "0.1.0"
authors = ["GeForceLegend"]
edition = "2021"

[dependencies]
gl = "0.14"
glutin = "0.29"
lazy_static = "1.4"
regex = "1.4"
serde = "1.0"
serde_json = "1.0"
slog-scope = "4.4"
tower-lsp = "0.19"
tokio = { version = "1.18", features = ["full"] }
tree-sitter = "0.20.9"
tree-sitter-glsl = "0.1.4"
url = "2.2"

logging = { path = "../logging" }
logging_macro = { path = "../logging_macro" }

[dev-dependencies]
