[package]
name = "vscode-mcshader"
version = "0.2.0"
authors = ["GeForceLegend"]
edition = "2021"

[dependencies]
gl = "0.14"
glutin = "0.29"
hashbrown = { version = "0.12.3", features = ["default", "serde"]}
itoa = "1.0.6"
lazy_static = "1.4"
regex = "1.7.3"
serde = "1.0"
serde_json = "1.0"
slog-scope = "4.4"
tower-lsp = "0.19"
tokio = { version = "1.27", features = ["full"] }
tree-sitter = "0.20.10"
tree-sitter-glsl = "0.1.4"
url = "2.3"

logging = { path = "../logging" }
logging_macro = { path = "../logging_macro" }

[dev-dependencies]
